# pyansys-tools-variableinterop

./: .gitignore  .pre-commit-config.yaml  CNAME  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTORS.md  README.rst  conftest.py  index.html  pyproject.toml  robots.txt  tox.ini  versions.json
.github/: dependabot.yml
.github/workflows/: ci_cd.yml
.reuse/: dep5
doc/: Makefile  make.bat
doc/source/: class_documentation.rst  conf.py  index.rst  links.rst
doc/source/api/: index.rst
doc/source/contributing/: index.rst
doc/source/getting_started/: index.rst
doc/source/user_guide/: index.rst
doc/styles/Vocab/ANSYS/: accept.txt
doc/styles/config/vocabularies/ANSYS/: accept.txt
src/ansys/common/variableinterop/: __init__.py  api_serialization.py  api_string_to_value_visitor.py  array_metadata.py  array_to_from_string_util.py  array_value_conversion.py  array_value_visitors.py  array_values.py  boolean_array_metadata.py  boolean_array_value.py  boolean_metadata.py  boolean_value.py  coercion.py  common_variable_metadata.py  exceptions.py  file_array_metadata.py  file_array_value.py  file_metadata.py  file_scope.py  file_value.py  from_formatted_string_visitor.py  get_modelcenter_type_for_value.py  integer_array_metadata.py  integer_array_value.py  integer_metadata.py  integer_value.py  isave_context.py  ivariable_type_pseudovisitor.py  ivariable_visitor.py  ivariablemetadata_visitor.py  locale_utils.py  module.py  non_managing_file_scope.py  numeric_metadata.py  other_module.py  real_array_metadata.py  real_array_value.py  real_metadata.py  real_value.py  scalar_metadata.py  (+26 more)
src/ansys/common/variableinterop/utils/: __init__.py  array_to_from_string_util.py  coercion.py  convert.py  implicit_coercion.py  locale_utils.py  string_escaping.py  variable_type_util.py
src/ansys/tools/variableinterop/: __init__.py  api_serialization.py  api_string_to_value_visitor.py  array_metadata.py  array_value_conversion.py  array_values.py  common_variable_metadata.py  exceptions.py  file_array_metadata.py  file_array_value.py  file_metadata.py  file_scope.py  file_value.py  from_formatted_string_visitor.py  get_modelcenter_type_for_value.py  isave_context.py  ivariable_type_pseudovisitor.py  ivariable_visitor.py  ivariablemetadata_visitor.py  linking_rules.py  non_managing_file_scope.py  numeric_metadata.py  scalar_metadata.py  scalar_value_conversion.py  scalar_values.py  strings.properties  unified_type_library.py  uniform_type_library.py  value_from_formatted_string.py  var_type_array_check.py  variable_factory.py  variable_state.py  variable_type.py  variable_value.py  vartype_arrays_and_elements.py
src/ansys/tools/variableinterop/api/: __init__.py  abstract_initializer_type_library.py  exceptions.py  itype_library.py  strings.properties
src/ansys/tools/variableinterop/utils/: __init__.py  array_to_from_string_util.py  implicit_coercion.py  locale_utils.py  string_escaping.py  variable_type_util.py
tests/: abstract_type_library_compatibility_tests.py  conftest.py  test_api.py  test_array_value_conversion.py  test_boolean_array.py  test_boolean_array_value.py  test_boolean_value.py  test_coercion.py  test_common_variable_metadata.py  test_convert.py  test_equality.py  test_file_array_value.py  test_file_value.py  test_formatted_string_visitors.py  test_from_api_string.py  test_from_formatted_string_visitor.py  test_get_modelcenter_type_for_value.py  test_implicit_coercion.py  test_integer_array_value.py  test_integer_value.py  test_library.py  test_metadata.py  test_metadata_visitor.py  test_non_managing_file_scope.py  test_real_array_value.py  test_real_value.py  test_scalar_value_conversion.py  test_string_array_value.py  test_string_escaping.py  test_string_value.py  test_to_boolean_value.py  test_to_boolean_visitor.py  test_to_display_string.py  test_to_formatted_string.py  test_to_formatted_string_visitor.py  test_to_real_array_visitor.py  test_uniform_type_library.py  test_utils.py  test_var_type_is_array.py  test_variable_type.py  (+6 more)
version/: index.html
version/0.1/: .buildinfo  404.html  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
version/0.1/_sources/: index.rst.txt
version/0.1/_sources/getting_started/: index.rst.txt
version/0.1/api/: index.html
version/0.1/api/ansys/tools/variableinterop/: index.html
version/0.1/api/ansys/tools/variableinterop/api_serialization/: index.html
version/0.1/api/ansys/tools/variableinterop/api_string_to_value_visitor/: APIStringToValueVisitor.html
version/0.1/api/ansys/tools/variableinterop/array_metadata/: BooleanArrayMetadata.html  StringArrayMetadata.html  index.html
version/0.1/api/ansys/tools/variableinterop/array_value_conversion/: index.html
version/0.1/api/ansys/tools/variableinterop/array_values/: BooleanArrayValue.html  RealArrayValue.html  StringArrayValue.html  index.html
version/0.1/api/ansys/tools/variableinterop/common_variable_metadata/: CommonVariableMetadata.html  index.html
version/0.1/api/ansys/tools/variableinterop/exceptions/: IncompatibleTypesException.html  ValueDeserializationUnsupportedException.html  index.html
version/dev/: .buildinfo  404.html  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
version/dev/_sources/api/: index.rst.txt
version/dev/_sources/contributing/: index.rst.txt
version/dev/_static/: search.json
version/dev/api/: index.html
version/dev/api/ansys/tools/variableinterop/: index.html
version/dev/contributing/: index.html
version/dev/getting_started/: index.html
version/dev/user_guide/: index.html
version/stable/: genindex.html  index.html  objects.inv  py-modindex.html
version/stable/_sources/api/: index.rst.txt
version/stable/_sources/contributing/: index.rst.txt
version/stable/_static/: search.json
version/stable/api/: index.html
version/stable/api/ansys/tools/variableinterop/: index.html
version/stable/contributing/: index.html
version/stable/getting_started/: index.html
version/stable/user_guide/: index.html
(+386 files in other folders)
