[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "pyansys-tools-variableinterop"
version = "0.1.dev0"
description = "Optional variable specifications for interoperability between languages and capabilities"
readme = "README.rst"
license = {file = "LICENSE"}
authors = [{name = "ANSYS, Inc.", email = "pyansys.core@ansys.com"}]
maintainers = [{name = "ANSYS, Inc.", email = "pyansys.core@ansys.com"}]
repository = "https://github.com/ansys/pyansys-tools-variableinterop"

classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

packages = [
    { include = "ansys", from = "src" },
]

dependencies = [
    "anyio>=3.5"
    "numpy>=1.20.3",
    "overrides>=6.1",
]


[project.optional-dependencies]
doc = [
    "ansys-sphinx-theme==0.10.2",
    "numpydoc==1.5.0",
    "Sphinx==7.1.1",
    "sphinx-copybutton==0.5.2",
]
tests = [
    "numpy==1.25.2",
    "pytest==7.4.0",
    "pytest-cov==4.1.0",
    "pytest-mock==3.11.1",
]

[project.urls]
Source = "https://github.com/ansys/pyansys-tools-variableinterop"
Issues = "https://github.com/ansys/pyansys-tools-variableinterop/issues"
Discussions = "https://github.com/ansys/pyansys-tools-variableinterop/discussions"

[tool.flit.module]
name = "ansys.tools.variableinterop"

[tool.black]
line-length = 100

[tool.isort]
profile = "black"
force_sort_within_sections = true
line_length = 100
default_section = "THIRDPARTY"
src_paths = ["doc", "src", "tests"]

[tool.docformatter]
in-place = true
pre-summary-newline = true
wrap-descriptions = 88
wrap-summaries = 88

[tool.coverage.run]
source = ["ansys.tools.variableinterop"]

[tool.coverage.report]
show_missing = true

[tool.pytest.ini_options]
minversion = "7.1"
addopts = "-ra --cov=ansys.tools.variableinterop --cov-report html:.cov/html --cov-report xml:.cov/xml --cov-report term -vv --image_cache_dir tests/integration/image_cache --add_missing_images"
testpaths = [
    "tests",
]