[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
# Check https://flit.readthedocs.io/en/latest/pyproject_toml.html for all available sections
name = "pyansys-tools-variableinterop"
version = "0.1.1"
description = "Optional variable specifications for interoperability between languages and capabilities."
readme = "README.rst"
requires-python = ">=3.9,<4"
license = {file = "LICENSE"}
authors = [{name = "ANSYS, Inc.", email = "pyansys.core@ansys.com"}]
maintainers = [{name = "ANSYS, Inc.", email = "pyansys.core@ansys.com"}]
repository = "https://github.com/ansys/pyansys-tools-variableinterop"

classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "anyio>=3.5",
    "numpy>=1.20.3",
    "overrides>=7.4",
]


[project.optional-dependencies]
doc = [
    "ansys-sphinx-theme==0.12.4",
    "numpydoc==1.6.0",
    "Sphinx==7.2.6",
    "sphinx-copybutton==0.5.2",
    "sphinx-autoapi==3.0.0", # "sphinx-autoapi @ git+https://github.com/jorgepiloto/sphinx-autoapi@feat/single-page-option", ---> Installed directly in workflow
    "sphinx-notfound-page==1.0.0",
    "sphinx-gallery==0.14.0",
    "sphinx-design==0.5.0",
    "pytest-sphinx==0.5.0",
]
tests = [
    "anyio==4.0.0",
    "numpy==1.26.1",
    "overrides==7.4.0",
    "pytest==7.4.2",
    "pytest-cov==4.1.0",
    "pytest-mock==3.11.1",
]

[tool.flit.module]
name = "ansys.tools.variableinterop"

[project.urls]
Source = "https://github.com/ansys/pyansys-tools-variableinterop"
Issues = "https://github.com/ansys/pyansys-tools-variableinterop/issues"
Discussions = "https://github.com/ansys/pyansys-tools-variableinterop/discussions"

[tool.black]
line-length = 100

[tool.isort]
profile = "black"
force_sort_within_sections = true
line_length = 100
default_section = "THIRDPARTY"
src_paths = ["doc", "src", "tests"]

[tool.docformatter]
in-place = true
pre-summary-newline = true
wrap-descriptions = 88
wrap-summaries = 88

[tool.coverage.run]
source = ["ansys.tools.variableinterop"]

[tool.coverage.report]
show_missing = true

[tool.pytest.ini_options]
minversion = "7.1"
addopts = "-ra --cov=ansys.tools.variableinterop --cov-report html:.cov/html --cov-report xml:.cov/xml --cov-report term -vv"
testpaths = [
    "tests",
]